--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sensitive-text-masker",
+  "name": "mani-peta",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,11 @@
   "dependencies": {
     "@google-cloud/vision": "^4.3.2",
     "@google/generative-ai": "^0.21.0",
+    "@heroicons/react": "^2.2.0",
     "@napi-rs/canvas": "^0.1.65",
     "formidable": "^3.5.2",
     "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2"
